# Client-Server-TCP

./: CLI.cpp  CLI.h  CMakeLists.txt  CanberraDistance.h  ChebyshevDistance.h  Client.cpp  Client.h  Command.cpp  Command.h  Data.cpp  Data.h  DefaultIO.cpp  Distance.h  EuclideanDistance.h  ManhattanDistance.h  Menu.cpp  Menu.h  README.md  Server.cpp  Server.h  SocketIO.cpp  SocketIO.h  StandardIO.cpp  beans_Classified.csv  chooseFive.cpp  chooseFive.h  chooseFour.cpp  chooseFour.h  chooseOne.cpp  chooseOne.h  chooseThree.cpp  chooseThree.h  chooseTwo.cpp  chooseTwo.h  client.out  knn.cpp  knn.h  main.cpp  makefile  results.txt  (+1 more)
datasets/beans/: myTest.csv
